--- a/public/spa.html
+++ b/public/spa.html
@@ -4,19 +4,41 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/spa.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="./js/servicesClient.js" type="text/javascript"></script>
     <script src="./js/functions.js" type="text/javascript"></script>
     <meta charset="utf-8">
     <title>Spa Booking</title>
   </head>
-  <body>
-    <div class="content">
-      Idioma: <select id="selIdioma">
-        <option value="es">Español</option>
-        <option value="en">Ingles</option>
-      </select>
-      <input id="ajax" name="ajax" type="button" value="Obtener Servicios" onclick="getServices();" />
+  <body onload="getServices();">
+    <div class="container-fluid">
+      <div class="jumbotron">
+        <h1>Spa Services Booking Testing</h1>
+        <h3>Web de pruebas para consumir los servicios de la API REST</h3>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-10 right">
+          <div class="dropdown">
+            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" onchange="getServices();">
+              Idioma
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#" data-locale="es">Español</a>
+              <a class="dropdown-item" href="#" data-locale="en">English</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div id="container" name="container" class="col-10 grid"></div>
+        </div>
+      </div>
+    </div>
+
+      <!-- <input id="ajax" name="ajax" type="button" value="Obtener Servicios" onclick="getServices();" />
       <div id="services" name="services" style="display:none"></div>
       <div id="bookings" name="bookings" style="display:none">
         <div class="row">
@@ -27,9 +49,9 @@
           <div class="col-1"></div>
           <div class="col-4" style="font-weight:bold">Inicio: <input id="dateFrom"></div>
           <div class="col-4" style="font-weight:bold">Fin: <input id="dateTo"></div>
-          <div class="col-2"><input id="getBookings" name="getBookings" type="button" value="Buscar" onclick="getBookings();" />
+          <div class="col-2"><input id="getBookings" name="getBookings" type="button" value="Buscar" onclick="getBookings();" /></div>
         </div>
-      </div>
-    </div>
+      </div>-->
+
   </body>
 </html>
