--- a/public/spa.html
+++ b/public/spa.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/spa.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="./js/servicesClient.js" type="text/javascript"></script>
-    <script src="./js/functions.js" type="text/javascript"></script>
     <meta charset="utf-8">
     <title>Spa Booking</title>
+
+    <link rel="stylesheet" type="text/css" media="screen" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" integrity="sha256-yMjaV542P+q1RnH6XByCPDfUFhmOafWbeLPmqKh11zo=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./css/spa.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha256-CjSoeELFOcH0/uxWu6mC/Vlrc1AARqbm/jiiImDGV3s=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js" integrity="sha256-5YmaxAwMjIpMrVlK84Y/+NjCpKnFYa8bWWBbUHSBGfU=" crossorigin="anonymous"></script>
+    <script src="./js/servicesClient.js" type="text/javascript"></script>
+    <script src="./js/functions.js" type="text/javascript"></script>
   </head>
   <body onload="getServices();">
-    <div class="container-fluid">
+    <div class="container">
       <div class="jumbotron">
         <h1>Spa Services Booking Testing</h1>
         <h3>Web de pruebas para consumir los servicios de la API REST</h3>
@@ -22,13 +25,13 @@
       <div class="row justify-content-center">
         <div class="col-10 right">
           <div class="dropdown">
-            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" onchange="getServices();">
+            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" onchange="getServices();">
               Idioma
             </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#" data-locale="es">Español</a>
-              <a class="dropdown-item" href="#" data-locale="en">English</a>
-            </div>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenuButton">
+              <li role="presentation"><a role="menuitem" href="#" data-locale="es">Español</a></li>
+              <li role="presentation"><a role="menuitem" href="#" data-locale="en">English</a></li>
+            </ul>
           </div>
         </div>
       </div>
@@ -37,21 +40,5 @@
         </div>
       </div>
     </div>
-
-      <!-- <input id="ajax" name="ajax" type="button" value="Obtener Servicios" onclick="getServices();" />
-      <div id="services" name="services" style="display:none"></div>
-      <div id="bookings" name="bookings" style="display:none">
-        <div class="row">
-          <div class="col-1"></div>
-          <div id="serviceSelected" class="col-10">Seleccione las fechas entre las que desea buscar disponibilidad</div>
-        </div>
-        <div class="row">
-          <div class="col-1"></div>
-          <div class="col-4" style="font-weight:bold">Inicio: <input id="dateFrom"></div>
-          <div class="col-4" style="font-weight:bold">Fin: <input id="dateTo"></div>
-          <div class="col-2"><input id="getBookings" name="getBookings" type="button" value="Buscar" onclick="getBookings();" /></div>
-        </div>
-      </div>-->
-
   </body>
 </html>
